[package]
name = "rusqlite-wasi-vfs"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0"
eyre = "0.6"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }

[dependencies.web-sys]
version = "0.3"
features = ["console", "Window", "Event", "DomStringList", "IdbDatabase", "IdbFactory", "IdbObjectStore", "IdbTransaction", "IdbOpenDbRequest"]

# [dependencies.libsqlite3-sys]
# path = "../rusqlite/libsqlite3-sys"

[dev-dependencies]
wasm-bindgen-test = "0.3"
